# outlook-cli

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  apps.json  config.example.yaml  pyproject.toml
outlook_cli/: account.py  auth.py  category_manager.py  cli.py  client.py  config.py  constants.py  exceptions.py  formatter.py  models.py  serialization.py  signature_manager.py
outlook_cli/commands/: _common.py  account.py  attachments.py  auth.py  calendar.py  categories.py  contacts.py  folders.py  mail.py  manage.py  open_item.py  schedule.py  search.py  signatures.py  summary.py
screenshots/: generate_demos.py
tests/: conftest.py  test_account_commands.py  test_account_profiles.py  test_attachments.py  test_auth_module.py  test_calendar_timezone.py  test_client_core.py  test_commands_mail_schedule.py  test_commands_misc.py  test_common_cli_config.py  test_exceptions.py  test_exit_codes.py  test_formatter_outputs.py  test_login_with_token.py  test_models.py  test_pin.py  test_query_builder.py  test_serialization.py  test_signature_manager.py  test_summary_command.py
tests/fixtures/: email_response.json  event_response.json
